kubernetes/blackjack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackjack-service
  labels:
    app: blackjack
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: blackjack
    app.kubernetes.io/name: blackjack
spec:
  selector:
    app: blackjack
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
