kubernetes/blackjack/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: blackjack-app
  labels:
    app: blackjack
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: blackjack
    app.kubernetes.io/name: blackjack
spec:
  to:
    kind: Service
    name: blackjack-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
